{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 96,
  "lineage": "5c811937-7a40-886b-e9c2-1d0fe8a73549",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:528519205020:loadbalancer/app/test-ecs-lb/716e50245486609d",
            "arn_suffix": "app/test-ecs-lb/716e50245486609d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-ecs-lb-665915133.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:528519205020:loadbalancer/app/test-ecs-lb/716e50245486609d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-ecs-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfbce2c343621cef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a7df63f65221747"
              },
              {
                "subnet_id": "subnet-0dba373ae49879cd4"
              },
              {
                "subnet_id": "subnet-0f72f9878f8ec5f72"
              }
            ],
            "subnets": [
              "subnet-02a7df63f65221747",
              "subnet-0dba373ae49879cd4",
              "subnet-0f72f9878f8ec5f72"
            ],
            "tags": {
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0568dd06f65c3381d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.alb.aws_security_group.lb",
            "module.vpc.data.aws_vpc.main",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:528519205020:listener/app/test-ecs-lb/716e50245486609d/7381fe92eef223ef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:528519205020:targetgroup/binpipe-target-group/71b447ae7cc091d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:528519205020:listener/app/test-ecs-lb/716e50245486609d/7381fe92eef223ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:528519205020:loadbalancer/app/test-ecs-lb/716e50245486609d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.test-lb",
            "module.alb.aws_lb_target_group.lb_target_group",
            "module.alb.aws_security_group.lb",
            "module.vpc.data.aws_vpc.main",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:528519205020:targetgroup/binpipe-target-group/71b447ae7cc091d5",
            "arn_suffix": "targetgroup/binpipe-target-group/71b447ae7cc091d5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:528519205020:targetgroup/binpipe-target-group/71b447ae7cc091d5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "binpipe-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.main",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:security-group/sg-0dfbce2c343621cef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfbce2c343621cef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-lb",
            "name_prefix": "",
            "owner_id": "528519205020",
            "revoke_rules_on_delete": false,
            "tags": {
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "binpipe",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.main",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:security-group/sg-088cfaf51f0364cab",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088cfaf51f0364cab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": "",
            "owner_id": "528519205020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "binpipe"
            },
            "tags_all": {
              "Name": "binpipe"
            },
            "timeouts": null,
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.main",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:vpc/vpc-0568dd06f65c3381d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b8dab2e9b4cd3e88",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0519846eb581c0bd0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0568dd06f65c3381d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b94238de75cf8db8",
            "owner_id": "528519205020",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "binpipe",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:network-acl/acl-0b918e2d741fe4cbf",
            "default_network_acl_id": "acl-0b918e2d741fe4cbf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b918e2d741fe4cbf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "528519205020",
            "subnet_ids": [
              "subnet-02a7df63f65221747",
              "subnet-0dba373ae49879cd4",
              "subnet-0f72f9878f8ec5f72"
            ],
            "tags": {
              "Name": "test_ecs_provisioning-default",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-default",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:route-table/rtb-0b94238de75cf8db8",
            "default_route_table_id": "rtb-0b94238de75cf8db8",
            "id": "rtb-0b94238de75cf8db8",
            "owner_id": "528519205020",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "test_ecs_provisioning-default",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-default",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:security-group/sg-02452538f66210046",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02452538f66210046",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "528519205020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_ecs_provisioning-default",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-default",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:internet-gateway/igw-0c61fd075e78e4c3e",
            "id": "igw-0c61fd075e78e4c3e",
            "owner_id": "528519205020",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c61fd075e78e4c3e",
            "id": "r-rtb-0b5464295e5d8bc441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b5464295e5d8bc44",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:route-table/rtb-0b5464295e5d8bc44",
            "id": "rtb-0b5464295e5d8bc44",
            "owner_id": "528519205020",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test_ecs_provisioning-public",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e5029da43912890",
            "route_table_id": "rtb-0b5464295e5d8bc44",
            "subnet_id": "subnet-0dba373ae49879cd4"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9f79bd915e93771",
            "route_table_id": "rtb-0b5464295e5d8bc44",
            "subnet_id": "subnet-0f72f9878f8ec5f72"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d89fe576e57b33c3",
            "route_table_id": "rtb-0b5464295e5d8bc44",
            "subnet_id": "subnet-02a7df63f65221747"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:subnet/subnet-0dba373ae49879cd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dba373ae49879cd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528519205020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-ap-southeast-1a",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-ap-southeast-1a",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:subnet/subnet-0f72f9878f8ec5f72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f72f9878f8ec5f72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528519205020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-ap-southeast-1b",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-ap-southeast-1b",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:subnet/subnet-02a7df63f65221747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a7df63f65221747",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528519205020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-ap-southeast-1c",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-ap-southeast-1c",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0568dd06f65c3381d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:528519205020:vpc/vpc-0568dd06f65c3381d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b918e2d741fe4cbf",
            "default_route_table_id": "rtb-0b94238de75cf8db8",
            "default_security_group_id": "sg-02452538f66210046",
            "dhcp_options_id": "dopt-0519846eb581c0bd0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0568dd06f65c3381d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b94238de75cf8db8",
            "owner_id": "528519205020",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning",
              "createdBy": "binpipe",
              "env": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}